--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Box.cs" />
     <Compile Include="Vues\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
