--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Box.cs" />
+    <Compile Include="Models\Client.cs" />
     <Compile Include="Models\Individuel.cs" />
     <Compile Include="Vues\Box.cs">
       <SubType>Form</SubType>
