--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Models\Box.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\Individuel.cs" />
+    <Compile Include="Models\Professionnel.cs" />
     <Compile Include="Vues\Box.cs">
       <SubType>Form</SubType>
     </Compile>
