--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Models\Box.cs" />
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Colis.cs" />
     <Compile Include="Models\Compartiment.cs" />
     <Compile Include="Models\Individuel.cs" />
     <Compile Include="Models\Professionnel.cs" />
