--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Models\Individuel.cs" />
     <Compile Include="Models\Livreur.cs" />
     <Compile Include="Models\Professionnel.cs" />
+    <Compile Include="Vues\Box.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vues\Box.Designer.cs">
+      <DependentUpon>Box.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vues\FormBox.cs">
       <SubType>Form</SubType>
     </Compile>
