--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -101,6 +101,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vues\Colis.resx">
+      <DependentUpon>Colis.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vues\FormBox.resx">
       <DependentUpon>FormBox.cs</DependentUpon>
     </EmbeddedResource>
