--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -89,6 +89,12 @@
     <Compile Include="Vues\Livreur.Designer.cs">
       <DependentUpon>Livreur.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vues\Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vues\Menu.Designer.cs">
+      <DependentUpon>Menu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vues\Ville.cs">
       <SubType>Form</SubType>
     </Compile>
