okMerge branch 'main' of https://github.com/Galaad-LSV/Projet231120 into main

--- a/Projet231120/Projet231120/Projet231120.csproj
+++ b/Projet231120/Projet231120/Projet231120.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\Individuel.cs" />
     <Compile Include="Models\Livreur.cs" />
     <Compile Include="Models\Professionnel.cs" />
+    <Compile Include="Utilitaires\GestionCollection.cs" />
     <Compile Include="Utilitaires\GPS.cs" />
     <Compile Include="Vues\Box.cs">
       <SubType>Form</SubType>
